// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a mock Number field model 1`] = `
[
  {
    "config": {
      "label": "Eu",
      "placeholder": "Mollis nunc sed",
    },
    "type": "Number",
  },
  {
    "config": {
      "label": "Eu",
      "placeholder": "Mollis nunc sed",
    },
    "type": "Number",
  },
]
`;

exports[`supports number seed 1`] = `
[
  {
    "config": {
      "label": "Egestas",
      "placeholder": "Aliquam ut porttitor",
    },
    "type": "Number",
  },
  {
    "config": {
      "label": "Egestas",
      "placeholder": "Aliquam ut porttitor",
    },
    "type": "Number",
  },
]
`;
